# src/main/java/org/openlmis/stockmanagement/web/StockPointController.java
@@ -18,11 +18,14 @@ package org.openlmis.stockmanagement.web;
 import java.util.List;
 import org.openlmis.stockmanagement.domain.stockpoint.StockPoint;
 import org.openlmis.stockmanagement.service.abstracts.StockPointService;
+import org.openlmis.stockmanagement.service.JasperReportService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.profiler.Profiler;
 import org.springframework.beans.factory.annotation.Autowired;
 // import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -34,9 +37,29 @@ public class StockPointController {
   @Autowired
   StockPointService stockPointService;
 
+  @Autowired
+  private JasperReportService reportService;
+
   // @PreAuthorize("hasRole('ROLE_ANONYMOUS')")
   @GetMapping
   public List<StockPoint> getStockPoints() {
     return stockPointService.findStockPoints();
+  }
+
+  /**
+   * Get critical stock points report.
+   *
+   * @return generated PDF report
+   */
+  @RequestMapping(value = "/print", method = GET)
+  public ResponseEntity<byte[]> getCriticalStockPointsReport() {
+    byte[] report = reportService.generateCriticalStockPointsReport();
+
+    return ResponseEntity
+            .ok()
+            .contentType(MediaType.APPLICATION_PDF)
+            .header("Content-Disposition",
+                    "inline; filename=critical_stock_points" + "_" + ".pdf")
+            .body(report);
   }
 }
